# Q4-hackathon-2-phase-4-main

./: .gitignore  ADMIN_ACCESS.md  CLAUDE.md  DOCKER-TESTING-COMPLETE.md  DOCKER-TESTING.md  FINAL_NEON_INTEGRATION_SUMMARY.md  FIX_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  README-K8S-DEPLOYMENT.md  README-K8S.md  README.md  deploy-with-helm.bat  deploy.sh  docker-compose.yml  final_test_view_tasks.py  final_verification.py  inspect_fix.py  main.py  package-lock.json  package.json  pyproject.toml  task-management-chatbot-config.json  test-docker-builds.sh  test_fix.py  test_fixed_logic.py  test_improved_view_tasks.py  test_signatures.py  test_updated_chatbot.py  test_view_tasks.py  verify-deployment.bat  verify-deployment.sh  verify_prompts.py  verify_table_format.py
ai-agent/: Dockerfile  agent.py  requirements.txt
backend/: $null  .dockerignore  Dockerfile  admin_utils.py  database.py  fix_db.py  main.py  models.py  pyproject.toml  requirements.txt  reset_db.py  test.db  test_neon_connection.py  test_neon_connection_simple.py  tmpclaude-c9ec-cwd  validate_phase3.py
docs/: DOCKER-TESTING-COMPLETE.md  DOCKER-TESTING.md  IMPROVEMENTS.md  PHASE3_SUMMARY.md  PHASE4_DEPLOYMENT_COMPLETE.md  PROJECT_HISTORY_UPDATE.md  README-K8S-DEPLOYMENT.md  README-K8S.md  task-management-chatbot-prompt-templates.md  task-management-chatbot-system-instructions.md
frontend/: .dockerignore  Containerization.md  Dockerfile  Dockerfile.simple  build-and-run.bat  build-and-run.sh  next.config.ts  package-lock.json  package.json
helm/: .gitignore  CREATE_SECRETS_CMD.md  (+5 more)
(+104 files in other folders)
